# Qt_Mingw_CICD

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile - Copy  Makefile  Makefile.Debug  Makefile.Release  README.md  calculator.cpp  calculator.h  mainwindow.cpp  test-results.xml  test_results.xml
tests/: CMakeLists.txt  test_calculator.cpp
